# simple-rust-api

./: Cargo.toml  README.md
src/: app.rs  error.rs  main.rs  router.rs
src/auth/: jwt.rs  password.rs
src/handlers/: auth.rs  users.rs
src/middleware/: auth.rs
src/models/: user.rs
