[package]
name = "simple-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
async-trait = "0.1.89"
axum-extra = { version = "0.12.3", features = ["typed-header"] }
rand_core = { version = "0.9.3", features = ["os_rng"] }
argon2 = "0.5.3"
iso_currency = "0.5.3"
rust_decimal = "1.39.0"
rust_decimal_macros = "1.39.0"
ndarray = "0.17.1"
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["v4", "serde"]}
rand = "0.9.2"

